--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: sans-serif;
+    font-size: 15px;
 }
 
 .container {
@@ -23,7 +24,7 @@ h1 {
 }
 
 .profile {
-    height: 110px;
+    height: 105px;
     border-radius: 50%;
 }
 
